syntax = "proto3";
package auth;
import "persons.proto";

option csharp_namespace = "GrpcService.Protos";

service Auth {
  rpc Login (LoginRequest) returns (persons.Person);
  rpc Register(RegisterRequest) returns (persons.Person);
}


message LoginRequest {
     string Name = 1;
     string Password = 2;
}


message RegisterRequest {
     string Name = 1;
     string Password = 2;
     optional string RoleName = 3;
}